--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"prefix" : "",
-	"token" : "",
-	"delay" : "delay in secs without any unit, for eg: 5",
-	"log_dms" : "enable or disable the logging after each DM"
+	"prefix" : "--",
+	"token" : "OTE5NTg4MjUyNTI3MjQzMzM1.YbX_TA.xDFGa-Ebt36GHG85dqswYKP2lr4",
+	"delay" : "1",
+	"log_dms" : "on"
 }
